2.12.2
* Fix some compiler warnings

2.12.1
* Implement getDifxScanIMIndex2 which can calculate the offset time a bit more accurately.  All functions calling getDifxScanIMIndex should now call getDifxScanIMIndex2.
* Add difxcalculator utility
* Version for DiFX-1.5.2

2.12
* Merge fixes from trunk
* Add network table infrastructure
* Load > 1 pulsar polynomial from a file
* Move flags to DifxJob so combinig multiple subarrays results in accurate
  application of flags.  NOTE: This breaks the API
* Version for DiFX-1.5.1

2.10.1
* Infrastructure for writing for file-based correlation
* When sorting antennas, update the scan table (nAntenna, im and model)
* Fix and simplify DifxInputGetScanIdByAntennaId
* Fix for parsing of .flag file.  
* Start some infrastructure for supporting proper flagging in cases of partially 
  overlapping scans
* Add difxcalculator under utils.  This is an implementation of 
  http://cira.ivec.org/dokuwiki/lib/exe/fetch.php/difx/difx_calculator.xls
  as a stand-alone program

2.10
* Deallocation option of function DifxBaselineAllocPolProds()
  - needed for more flexible frequency selection in vex2difx
* Consider antenna reordering when concattenating scans
* use same mjd rounding for .calc and .input files
* Version for DiFX-1.5

2.9
* Initial support for calculation of spacecraft positions via SPICE

2.8
* Version bump for slight API change
* padDifxScans added to allow extra non-correlation scans to be inserted

2.7
* Version bump for slight API change
* a few important bug fixes
* Add simplify functions for freqs, datastreams, baselines and configs
* separate out internal deallocation from table destructors and force to 0 deallocated arrays

2.6
* Version bump.  Slight change to internal API.  This version is needed for pulsar
  support in vex2difx.

2.5
* Version bump.  This version required now by vex2difx.

2.4 
* Post NRAO-DiFX 1.1 developments
* Ability to write .calc and .input files
* Mass renaming of .c source files